# DebrisFrame

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.py
.github/workflows/: TestWithSinglePython.yml
benchmarks/avaAverageTopoVoellmyTest/: debrisAverageTopoVoellmyTest_c1TiCfg.ini  debrisAverageTopoVoellmyTest_desDict.json  debrisAverageTopo_debrisframeCfg.ini
benchmarks/avaGenericTopoVoellmyTest/: debrisGenericTopoVoellmyTest_c1TifCfg.ini  debrisGenericTopoVoellmyTest_desDict.json  mass_releaseGenericTopo_7d89c1a8cf_com1_C_L_null_dfa.txt  releaseGenericTopo_7d89c1a8cf_com1_C_L_null_dfa_FM.asc  releaseGenericTopo_7d89c1a8cf_com1_C_L_null_dfa_FT.asc  releaseGenericTopo_7d89c1a8cf_com1_C_L_null_dfa_pft.asc  releaseGenericTopo_7d89c1a8cf_com1_C_L_null_dfa_pfv.asc  releaseGenericTopo_7d89c1a8cf_com1_C_L_null_dfa_ppr.asc
debrisframe/: debrisframeCfg.ini  runC1TIF.py  runC1Ti.py  runC1Tif.py  runC2TopRunDF.py  runComo1Debris.py  runStandardTestsC1Tif.py
debrisframe/c1TIF/: c1TIF.py  c1TIFCfg.ini
debrisframe/c1Ti/: c1Ti.py  c1TiCfg.ini
debrisframe/c1Tif/: c1Tif.py  c1TifCfg.ini
debrisframe/c2TopRunDF/: PlotResult.py  RandomSingleFlow.py  c2TopRunDF.py  c2TopRunDFCfg.ini  testClass.py  testOutput.py  testRasterio.py
debrisframe/como1Debris/: como1Debris.py  como1DebrisCfg.ini
debrisframe/data/debInclinedPlane/Inputs/: DEM_IP_Topo.asc.aux.xml
debrisframe/data/debrisAverageTopoTimeDep/Inputs/REL/: releaseDFTA.csv  releaseDFTA.dbf  (+2 more)
debrisframe/data/debrisParabolaChanneled/Inputs/: DEM_ParabolaChanneled.asc
debrisframe/data/debrisTopRun/Reference/: depo.asc  diff.asc
debrisframe/data/sensitivityCoulombAverageTopoNoChannel/Inputs/: DEM_DFTA_Topo_noChannel.asc
debrisframe/in1Utils/: generateTopo.py  generateTopoCfg.ini
debrisframe/out1Plot/: outTopo.py
debrisframe/runScripts/: runAdaptRelVol.py  runGenerateTopo.py  runRenaming.py  runTh2D.py
debrisframe/tests/: test_c1TIF.py  test_c1Ti.py  test_c1Tif.py  test_c2TopRunDF.py
docs/source/: PSNotes.rst  conf.py  index.rst  installation.rst  introduction.rst  moduleC1TIF.rst  references_all.bib
(+15 files in other folders)
